--- a/Katas_0.ipynb
+++ b/Katas_0.ipynb
@@ -17,7 +17,15 @@
    "id": "ecdd152d",
    "metadata": {},
    "source": [
-    "Palindrome robuste"
+    "# 1. Palindrome robuste"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72877033",
+   "metadata": {},
+   "source": [
+    "1. First draft"
    ]
   },
   {
@@ -35,6 +43,14 @@
     "        if s[i] != s[n - 1 - i]:\n",
     "            return False\n",
     "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e013f89",
+   "metadata": {},
+   "source": [
+    "2. Second draft"
    ]
   },
   {
@@ -65,18 +81,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "416bf937",
+   "metadata": {},
+   "source": [
+    "3. Third draft"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "e87ff2aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome_2(s: str) -> bool:\n",
     "    \"\"\"\n",
-    "    Détermine si une chaîne est un palindrome en ignorant la casse et\n",
-    "    les caractères non alphanumériques (accents normalisés).\n",
+    "\n",
+    "    Détermine si une chaîne est un palindrome en ignorant la casse et les caractères non alphanumériques (accents normalisés).\n",
     "\n",
     "    Complexité: O(n) en temps, O(n) en mémoire (pour la version filtrée).\n",
+    "\n",
     "    \"\"\"\n",
     "    if s is None:\n",
     "        return False\n",
@@ -95,25 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c39ec00d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "is_palindrome_1(\"kayak\")\n",
     "\n",
-    "\"\"\" \n",
     "assert is_palindrome_1(\"kayak\") is True\n",
     "assert is_palindrome_1(\"A man, a plan, a canal: Panama!\") is True\n",
     "assert is_palindrome_1(\"été\") is True\n",
-    "assert is_palindrome_1(\"python\") is False\n",
-    "\n",
-    "\"\"\""
+    "assert is_palindrome_1(\"python\") is False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "5703b6f2",
    "metadata": {},
    "outputs": [
@@ -123,7 +144,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,6 +152,14 @@
    "source": [
     "\n",
     "is_palindrome_0(\"kayak\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ff5f3d0",
+   "metadata": {},
+   "source": [
+    "Tests"
    ]
   },
   {
@@ -156,6 +185,106 @@
     "])\n",
     "def test_is_palindrome(s, expected):\n",
     "    assert is_palindrome_1(s) is expected\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "403f6105",
+   "metadata": {},
+   "source": [
+    "#### Lexiques\n",
+    "Signe diacritique : signe graphique (point, accent…) qui empêche la confusion entre homographes*. Les accents des mots à, dû, où sont des signes diacritiques. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68189b36",
+   "metadata": {},
+   "source": [
+    "# 2. Factorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ff3e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(n: int)-> int:\n",
+    "    r = 1\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        for k in range(2,n+1):\n",
+    "            r *= k\n",
+    "        return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6c4d9481",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# On teste avec 0\n",
+    "factorielle(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "dd67fd4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# On teste avec 4\n",
+    "factorielle(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8680e9ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# On teste avec 10\n",
+    "factorielle(10)"
    ]
   }
  ],
