--- a/Katas_0.ipynb
+++ b/Katas_0.ipynb
@@ -205,13 +205,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26f30d10",
+   "metadata": {},
+   "source": [
+    "0! = 1 par convention,\n",
+    "\n",
+    "n doit être un entier ≥ 0,\n",
+    "\n",
+    "sinon, on doit lever une erreur appropriée."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31142692",
+   "metadata": {},
+   "source": [
+    "#### 2.1 Factorial - first draft"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "39ff3e6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def factorial(n: int)-> int:\n",
+    "def factorial_0(n: int)-> int:\n",
     "    r = 1\n",
     "    if n == 0:\n",
     "        return 1\n",
@@ -223,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "6c4d9481",
    "metadata": {},
    "outputs": [
@@ -233,19 +253,19 @@
        "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# On teste avec 0\n",
-    "factorielle(0)"
+    "factorial_0(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "dd67fd4d",
    "metadata": {},
    "outputs": [
@@ -255,19 +275,19 @@
        "24"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# On teste avec 4\n",
-    "factorielle(4)"
+    "factorial_0(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "8680e9ee",
    "metadata": {},
    "outputs": [
@@ -277,14 +297,172 @@
        "3628800"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# On teste avec 10\n",
-    "factorielle(10)"
+    "factorial_0(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6ec922b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(n: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Calcule la factorielle d'un entier n (n!).\n",
+    "    \n",
+    "    Raises:\n",
+    "        TypeError: si n n'est pas un int\n",
+    "        ValueError: si n est négatif\n",
+    "    \"\"\"\n",
+    "    if not isinstance(n, int):\n",
+    "        raise TypeError(\"n must be an int\")\n",
+    "    if n < 0:\n",
+    "        raise ValueError(\"n must be >= 0\")\n",
+    "\n",
+    "    result = 1\n",
+    "    for i in range(2, n + 1):\n",
+    "        result *= i\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "1487ccc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'factorial' from 'katas' (c:\\Users\\blondeaqe\\OneDrive - Louis Vuitton Malletier\\Documents\\00. PERSO\\PYTHON\\python-katas\\katas.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-47-1921db3f8185>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkatas\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfactorial\u001b[0m  \u001b[1;31m# si ton fichier est katas.py\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m @pytest.mark.parametrize(\"n,expected\", [\n\u001b[0;32m      4\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'factorial' from 'katas' (c:\\Users\\blondeaqe\\OneDrive - Louis Vuitton Malletier\\Documents\\00. PERSO\\PYTHON\\python-katas\\katas.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from katas import factorial  # si ton fichier est katas.py\n",
+    "\n",
+    "@pytest.mark.parametrize(\"n,expected\", [\n",
+    "    (0, 1),\n",
+    "    (1, 1),\n",
+    "    (5, 120),\n",
+    "    (6, 720),\n",
+    "])\n",
+    "def test_factorial_values(n, expected):\n",
+    "    assert factorial(n) == expected\n",
+    "\n",
+    "def test_factorial_negative():\n",
+    "    with pytest.raises(ValueError):\n",
+    "        factorial(-1)\n",
+    "\n",
+    "def test_factorial_non_int():\n",
+    "    with pytest.raises(TypeError):\n",
+    "        factorial(3.5)  # type: ignore\n",
+    "    with pytest.raises(TypeError):\n",
+    "        factorial(\"10\")  # type: ignore\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22a8852a",
+   "metadata": {},
+   "source": [
+    "# 3. Fibonacci"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4f68a0e",
+   "metadata": {},
+   "source": [
+    "But : renvoyer F(n) avec boucle.  \n",
+    "\n",
+    "I/O : fib(n: int) -> int  \n",
+    "\n",
+    "Contraintes : n>=0, gérer types ; O(n).  \n",
+    "\n",
+    "Tests : 0→0, 1→1, 2→1, 7→13, erreurs pour -2, 1.5.  \n",
+    "\n",
+    "Critères : aucun appel récursif.  \n",
+    "\n",
+    "Extensions : version en temps O(log n) (exponentiation de matrices)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "54c6c396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Fibonacci(n:int) -> int:\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Renvoie le n-ième nombre de Fibonacci (0-indexé).\n",
+    "    F(0)=0, F(1)=1, puis F(n)=F(n-1)+F(n-2) pour n>=2.\n",
+    "\n",
+    "    Raises:\n",
+    "        TypeError: si n n'est pas un int.\n",
+    "        ValueError: si n < 0.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if not isinstance(n, int):\n",
+    "        raise TypeError(\"n must be an int\")\n",
+    "    if n < 0:\n",
+    "        raise ValueError(\"n must be >= 0\")\n",
+    "    \n",
+    "    A = [0,1]\n",
+    "\n",
+    "    if n < 2:\n",
+    "        return A[n]\n",
+    "    \n",
+    "    else:\n",
+    "        for i in range(2, n + 1):\n",
+    "                A.append(A[i - 1] + A[i - 2])\n",
+    "        return A[len(A)-1]\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d2fb69ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : 0\n",
+      "1 : 1\n",
+      "2 : 1\n",
+      "3 : 2\n",
+      "4 : 3\n",
+      "5 : 5\n",
+      "6 : 8\n",
+      "7 : 13\n",
+      "8 : 21\n",
+      "9 : 34\n",
+      "10 : 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(11):\n",
+    "    print(n,\":\",Fibonacci(n))\n"
    ]
   }
  ],
