--- a/Katas_0.ipynb
+++ b/Katas_0.ipynb
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "id": "0756ed4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pytest\n",
     "\n",
-    "from katas import is_palindrome_1\n",
+    "from palindrome import is_palindrome_1\n",
     "\n",
     "@pytest.mark.parametrize(\"s,expected\", [\n",
     "    (\"kayak\", True),\n",
@@ -463,6 +463,118 @@
    "source": [
     "for n in range(11):\n",
     "    print(n,\":\",Fibonacci(n))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d445e6c7",
+   "metadata": {},
+   "source": [
+    "# 4. Anagrammes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "9cf210ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unicodedata\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "9dce045a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _normalize(s: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Normalise une chaîne :\n",
+    "    - décomposition Unicode (NFD)\n",
+    "    - suppression des diacritiques (catégorie Mn)\n",
+    "    - passage en minuscules\n",
+    "    - conservation des seuls alphanumériques\n",
+    "    \"\"\"\n",
+    "    s_nfd = unicodedata.normalize(\"NFD\", s)\n",
+    "    no_diacritics = \"\".join(ch for ch in s_nfd if unicodedata.category(ch) != \"Mn\")\n",
+    "    return \"\".join(ch.lower() for ch in no_diacritics if ch.isalnum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "787f68b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_anagram(a: str, b: str) -> bool:\n",
+    "\n",
+    "    if a is None:\n",
+    "        return False\n",
+    "        \n",
+    "    a_norm = _normalize(a)\n",
+    "    b_norm = _normalize(b)\n",
+    "    \n",
+    "    if len(a_norm) != len(b_norm):\n",
+    "        return False\n",
+    "\n",
+    "    return Counter(a_norm) == Counter(b_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "74216301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytest\n",
+    "from anagram import is_anagram  # adapte l'import selon ton module\n",
+    "\n",
+    "@pytest.mark.parametrize(\"a,b,expected\", [\n",
+    "    (\"listen\", \"silent\", True),\n",
+    "    (\"Listen\", \"Silent\", True),                                  # casse ignorée\n",
+    "    (\"Dormitory\", \"Dirty room!!\", True),                         # espaces/ponctuation ignorés\n",
+    "    (\"Été\", \"ête\", True),                                        # diacritiques ignorés\n",
+    "    (\"éèàç\", \"aeec\", True),                                      # normalisation étendue\n",
+    "    (\"A gentleman\", \"Elegant man\", True),\n",
+    "    (\"William Shakespeare\", \"I am a weakish speller\", True),\n",
+    "    (\"apple\", \"pale\", False),\n",
+    "    (\"ab\", \"a b c\", False),\n",
+    "    (\"\", \"\", True),                                              # deux vides considérés anagrammes\n",
+    "])\n",
+    "def test_is_anagram(a, b, expected):\n",
+    "    assert is_anagram(a, b) is expected\n",
+    "\n",
+    "def test_is_anagram_none():\n",
+    "    assert is_anagram(None, \"abc\") is False      # type: ignore[arg-type]\n",
+    "    assert is_anagram(\"abc\", None) is False      # type: ignore[arg-type]\n",
+    "    assert is_anagram(None, None) is False       # type: ignore[arg-type]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "fa562d47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_anagram(\"listen\", \"silent\")"
    ]
   }
  ],
