--- a/Katas_0.ipynb
+++ b/Katas_0.ipynb
@@ -335,24 +335,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "id": "1487ccc1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'factorial' from 'katas' (c:\\Users\\blondeaqe\\OneDrive - Louis Vuitton Malletier\\Documents\\00. PERSO\\PYTHON\\python-katas\\katas.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-47-1921db3f8185>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkatas\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfactorial\u001b[0m  \u001b[1;31m# si ton fichier est katas.py\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m @pytest.mark.parametrize(\"n,expected\", [\n\u001b[0;32m      4\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'factorial' from 'katas' (c:\\Users\\blondeaqe\\OneDrive - Louis Vuitton Malletier\\Documents\\00. PERSO\\PYTHON\\python-katas\\katas.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from katas import factorial  # si ton fichier est katas.py\n",
+    "from factorial import factorial  # si ton fichier est katas.py\n",
     "\n",
     "@pytest.mark.parametrize(\"n,expected\", [\n",
     "    (0, 1),\n",
