--- a/jupyter_notebook/Katas_0.ipynb
+++ b/jupyter_notebook/Katas_0.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "8850739d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import unicodedata\n",
-    "import string"
+    "import sys, pathlib"
    ]
   },
   {
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "810e056b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "dc3c4d71",
    "metadata": {},
    "outputs": [],
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "e87ff2aa",
    "metadata": {},
    "outputs": [],
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "c39ec00d",
    "metadata": {},
    "outputs": [],
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "5703b6f2",
    "metadata": {},
    "outputs": [
@@ -144,7 +143,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,26 +163,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "0756ed4c",
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
+     "evalue": "No module named 'katas'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-82c370ceee4d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpytest\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpalindrome\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mis_palindrome_1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m @pytest.mark.parametrize(\"s,expected\", [\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+      "\u001b[1;32m<ipython-input-27-d8eb724e7b08>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpytest\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkatas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpalindrome\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mis_palindrome_1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m @pytest.mark.parametrize(\"s,expected\", [\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'katas'"
      ]
     }
    ],
    "source": [
     "import pytest\n",
     "\n",
-    "from src.palindrome import is_palindrome_1\n",
+    "from katas.palindrome import is_palindrome_1\n",
     "\n",
     "@pytest.mark.parametrize(\"s,expected\", [\n",
     "    (\"kayak\", True),\n",
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "39ff3e6a",
    "metadata": {},
    "outputs": [],
@@ -255,73 +254,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "6c4d9481",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : 1\n",
+      "1 : 1\n",
+      "2 : 2\n",
+      "3 : 6\n",
+      "4 : 24\n",
+      "5 : 120\n",
+      "6 : 720\n",
+      "7 : 5040\n",
+      "8 : 40320\n",
+      "9 : 362880\n",
+      "10 : 3628800\n"
+     ]
     }
    ],
    "source": [
-    "# On teste avec 0\n",
-    "factorial_0(0)"
+    "for i in range(11):\n",
+    "    print(i,\":\",factorial_0(i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "dd67fd4d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# On teste avec 4\n",
-    "factorial_0(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "8680e9ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3628800"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# On teste avec 10\n",
-    "factorial_0(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "6ec922b5",
    "metadata": {},
    "outputs": [],
@@ -347,12 +309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "1487ccc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-555bb92280ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfactorial\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfactorial\u001b[0m  \u001b[1;31m# si ton fichier est katas.py\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m @pytest.mark.parametrize(\"n,expected\", [\n\u001b[0;32m      4\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+     ]
+    }
+   ],
    "source": [
-    "from factorial import factorial  # si ton fichier est katas.py\n",
+    "from src.factorial import factorial \n",
     "\n",
     "@pytest.mark.parametrize(\"n,expected\", [\n",
     "    (0, 1),\n",
@@ -527,13 +501,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "74216301",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pytest\n",
-    "from anagram import is_anagram  # adapte l'import selon ton module\n",
+    "from src.anagram import is_anagram  # adapte l'import selon ton module\n",
     "\n",
     "@pytest.mark.parametrize(\"a,b,expected\", [\n",
     "    (\"listen\", \"silent\", True),\n",
