--- a/jupyter_notebook/Katas_0.ipynb
+++ b/jupyter_notebook/Katas_0.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0191fa1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "72877033",
    "metadata": {},
@@ -554,7 +562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
