--- a/jupyter_notebook/Katas_0.ipynb
+++ b/jupyter_notebook/Katas_0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "8850739d",
    "metadata": {},
    "outputs": [],
@@ -20,14 +20,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0191fa1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "72877033",
    "metadata": {},
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "810e056b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +41,7 @@
     "    for i in range(n // 2):\n",
     "        if s[i] != s[n - 1 - i]:\n",
     "            return False\n",
-    "    return True\n"
+    "    return True"
    ]
   },
   {
@@ -62,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "dc3c4d71",
    "metadata": {},
    "outputs": [],
@@ -97,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "e87ff2aa",
    "metadata": {},
    "outputs": [],
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "c39ec00d",
    "metadata": {},
    "outputs": [],
@@ -141,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "5703b6f2",
    "metadata": {},
    "outputs": [
@@ -151,7 +143,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,39 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "0756ed4c",
+   "execution_count": null,
+   "id": "4026b17e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'katas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-d8eb724e7b08>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpytest\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkatas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpalindrome\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mis_palindrome_1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m @pytest.mark.parametrize(\"s,expected\", [\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'katas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pytest\n",
-    "\n",
-    "from katas.palindrome import is_palindrome_1\n",
-    "\n",
-    "@pytest.mark.parametrize(\"s,expected\", [\n",
-    "    (\"kayak\", True),\n",
-    "    (\"\", True),\n",
-    "    (\"A man, a plan, a canal: Panama!\", True),\n",
-    "    (\"No 'x' in Nixon\", True),\n",
-    "    (\"été\", True),                 # avec accents\n",
-    "    (\"python\", False),\n",
-    "    (\"ab\", False),\n",
-    "    (None, False),                 # si vous choisissez de renvoyer False pour None\n",
-    "])\n",
-    "def test_is_palindrome(s, expected):\n",
-    "    assert is_palindrome_1(s) is expected\n"
+    "# Tests"
    ]
   },
   {
@@ -245,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "39ff3e6a",
    "metadata": {},
    "outputs": [],
@@ -262,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6c4d9481",
    "metadata": {},
    "outputs": [
@@ -291,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6ec922b5",
    "metadata": {},
    "outputs": [],
@@ -384,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "54c6c396",
    "metadata": {},
    "outputs": [],
@@ -420,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "d2fb69ab",
    "metadata": {},
    "outputs": [
@@ -457,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "9cf210ec",
    "metadata": {},
    "outputs": [],
@@ -468,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "9dce045a",
    "metadata": {},
    "outputs": [],
@@ -488,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "787f68b9",
    "metadata": {},
    "outputs": [],
@@ -540,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "fa562d47",
    "metadata": {},
    "outputs": [
@@ -562,7 +527,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
